--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="../d3.min.js"></script>
 </head>
 <body>
 
-    <script>
-        d3.csv("data.csv", function(data) {
-            console.log(data);
+<script>
+    var width = 500;
+                var height = 500;
 
-            for (var i = 0; i < data.length; i++) {
-                console.log(data[i].Name);
-                console.log(data[i].Age);
-            }
-        });
-        </script> 
+                //Create SVG element
+                var svg = d3.select("body")
+                .append("svg")
+                .attr("width", width)
+                .attr("height", height);
+
+                //Create line element inside SVG
+    svg.append("line")
+       .attr("x1", 100)
+       .attr("x2", 500)
+       .attr("y1", 50)
+       .attr("y2", 50)
+       .attr("stroke", "red")
+</script>
 </body>
 </html>
