--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 
 <!DOCTYPE html>
 <html lang="en">
+        <svg width="500" height="500">
+                <text x="250" y="25">Your text here</text>
+</svg>
 <head>
+<meta> charset='utf8'     
     <script src="../d3.min.js"></script>
 </head>
-<body>
-
-<script>
-    var width = 500;
-                var height = 500;
-
-                //Create SVG element
-                var svg = d3.select("body")
-                .append("svg")
-                .attr("width", width)
-                .attr("height", height);
-
-                //Create line element inside SVG
-    svg.append("line")
-       .attr("x1", 100)
-       .attr("x2", 500)
-       .attr("y1", 50)
-       .attr("y2", 50)
-       .attr("stroke", "red")
-</script>
-</body>
+<<body>
+        <script>
+        var width = 500;
+        var height = 500;
+        
+        var svg = d3.select("body")
+                    .append("svg")
+                    .attr("width", width)
+                    .attr("height", height);
+        
+        svg.append("ellipse")
+           .attr("cx", 250)
+           .attr("cy", 50)
+           .attr("rx", 150)
+           .attr("ry", 50)
+        </script>
+        </body>
 </html>
