--- a/data.html
+++ b/data.html
@@ -35,7 +35,7 @@
     var g = svg.append("g")
             .attr("transform", "translate(" + 100 + "," + 100 + ")");
 
-    d3.csv("xyz.csv", function(error, data) {
+    d3.csv("abc.csv", function(error, data) {
         if (error) {
             throw error;
         }
